# fast_bitfield

./: Cargo.toml
.cargo/: config
src/: large_bit_field.rs  large_bitfield.rs  lib.rs  small_bit_field.rs  small_bitfield.rs
